[project]
name = "qumat"
version = "0.4"
description = "A library for composing quantum machine learning."
authors = [{ name = "Apache Mahout", email = "dev@mahout.apache.org" }]
license = "Apache-2.0"
requires-python = ">=3.10,<3.11"
readme = "README.md"
dependencies = [
    "qiskit>=2.2.0,<3.0.0",
    "qiskit-aer>=0.17.2,<0.18.0",
    "cirq>=1.5.0,<1.6.0",
    "amazon-braket-sdk>=1.102.6,<2.0",
    "sympy>=1.14.0,<2.0",
    "flask (>=3.1.2,<4.0.0)",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "ruff>=0.13.1", "pre-commit>=3.0.0", "mypy>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = ["-v", "--tb=short"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

# Ignore missing type stubs for third-party quantum libraries
[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "qiskit_aer.*",
    "cirq.*",
    "braket.*",
    "sympy.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
