[workspace]
members = [
    "qdp-core",
    "qdp-kernels",
    "qdp-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Apache Mahout Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# CUDA runtime bindings (using 0.13+ for alloc_zeros support)
# Using CUDA 12.5 as baseline (compatible with most modern GPUs)
# 0.13+ provides crucial device-side allocation APIs that avoid CPU memory overhead
cudarc = { version = "0.13", features = ["cuda-12050"] }
# Build dependencies (locked to minor version for CUDA 13 / C++20 support)
cc = "1.2"
# Utilities (Rust 2024 Edition compatible)
thiserror = "2.0"
# Parallel computing (for CPU preprocessing)
rayon = "1.10"
# Apache Arrow for columnar data format support
arrow = "54"
# Parquet support for Arrow
parquet = "54"
# NumPy file format support
ndarray = "0.16"
ndarray-npy = "0.9"
# Protocol Buffer support for TensorFlow TensorProto
prost = "0.12"
prost-build = "0.12"
bytes = "1.5"
# PyTorch tensor loading (optional)
tch = "0.22"
# Optional: vendored protoc to avoid build failures when protoc is missing
protoc-bin-vendored = "3"

# Release profile optimizations
[profile.release]
opt-level = 3          # Maximum optimization
lto = "fat"            # Link Time Optimization: cross-crate inlining
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller binary, faster (unwind logic removed)
strip = true           # Strip symbols for smaller binary size
