[package]
name = "qdp-core"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc = { workspace = true }
qdp-kernels = { path = "../qdp-kernels" }
thiserror = { workspace = true }
rayon = { workspace = true }
nvtx = { version = "1.3", optional = true }
arrow = { workspace = true }
parquet = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tch = { workspace = true, optional = true }
log = "0.4"

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lib]
name = "qdp_core"

[features]
default = []
observability = ["nvtx"]
pytorch = ["tch"]

[dev-dependencies]
approx = "0.5.1"
env_logger = "0.11"
