[package]
name = "qdp-core"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc = { workspace = true, optional = true }
qdp-kernels = { path = "../qdp-kernels", default-features = false }
thiserror = { workspace = true }
rayon = { workspace = true }
nvtx = { version = "1.3", optional = true }
arrow = { workspace = true }
parquet = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tch = { workspace = true, optional = true }
object_store = { workspace = true, features = ["aws", "gcp"], optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }
tempfile = { workspace = true, optional = true }
futures = { version = "0.3", default-features = false, optional = true }
log = "0.4"

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lib]
name = "qdp_core"

[features]
# `cuda` and `hip` are mutually exclusive; pick exactly one vendor backend.
# If both end up enabled (e.g. via workspace feature unification), `hip` takes
# precedence: kernels build for HIP and cudarc is compiled but unused.
# NVIDIA CUDA via cudarc + nvcc kernels (default, unchanged behavior).
default = ["cuda"]
cuda = ["dep:cudarc", "qdp-kernels/cuda"]
# AMD HIP: hipcc kernels + the qdp-kernels device shim; no cudarc.
hip = ["qdp-kernels/hip"]
observability = ["nvtx"]
pytorch = ["tch"]
remote-io = ["object_store", "tokio", "tempfile", "futures"]

[dev-dependencies]
approx = "0.5.1"
env_logger = "0.11"
tempfile = { workspace = true }
