[package]
name = "qdp-python"
version.workspace = true
edition.workspace = true

[lib]
name = "_qdp"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11"
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
qdp-core = { path = "../qdp-core" }

[features]
default = []
observability = ["qdp-core/observability"]
pytorch = ["qdp-core/pytorch"]
