[package]
name = "qdp-python"
version.workspace = true
edition.workspace = true

[lib]
name = "_qdp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27" }
numpy = "0.27"
qdp-core = { path = "../qdp-core" }
env_logger = "0.11"

[features]
default = []
observability = ["qdp-core/observability"]
pytorch = ["qdp-core/pytorch"]
