[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "qumat-qdp"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["qumat>0.4.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = ["pytest", "torch>=2.2,<=2.9.0"]
benchmark = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tensorflow>=2.20",
    "torch>=2.2,<=2.9.0",
    "qiskit>=1.0",
    "qiskit-aer>=0.17.2",
    "pennylane>=0.35",
    "scikit-learn>=1.3",
    "tqdm",
    "matplotlib",
]

[tool.uv.sources]
qumat = { path = "../..", editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu122"
explicit = true

[tool.maturin]
module-name = "_qdp"
