[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "qumat-qdp"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest",
    "torch>=2.2,<=2.9.0",
    "triton>=3.0",
]
benchmark = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tensorflow>=2.20",
    "torch>=2.2,<=2.9.0",
    "triton>=3.0",
    "qiskit>=1.0",
    "qiskit-aer>=0.17.2",
    "pennylane>=0.35",
    "pennylane>=0.44; python_version >= '3.11'",
    "pennylane-lightning[gpu]>=0.44; python_version >= '3.11'",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tqdm",
    "matplotlib",
]

[tool.uv.sources]
qumat = { path = "../..", editable = true }

# Invalidate uv cache when Rust or Cargo changes so extension is rebuilt (run_throughput_pipeline_py etc.).
# Ref: https://docs.astral.sh/uv/concepts/cache/#dynamic-metadata
[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**" },
]

[tool.maturin]
module-name = "_qdp"
# Include qumat_qdp/ Python package in wheel alongside compiled _qdp extension
python-packages = ["qumat_qdp"]
